Auction for a bid is added
